# recall-os

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  entrypoint.sh  package-lock.json  package.json
ai-services/: chunker.py  groq_client.py  ocr_service.py  ollama_client.py  ollama_llm_client.py
backend/: manage.py  requirements.txt
backend/core/: models.py  serializers.py  tasks.py  tests.py  urls.py  views.py
backend/recallos/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
client/: index.html
client/src/: App.jsx
docs/: README.md  ai-pipeline.md  api-endpoints.md  architecture.md  data-model.md  development-guide.md  operations.md  project-structure.md  use-cases.md
recall-app/: README.md  package.json  vite.config.js
recall-app/src/: App.jsx  App.module.css  index.css
recall-server/: Dockerfile  README.md
recall-server/ai-services/: ollama_client.py
recall-server/backend/: requirements.txt
src/: App.jsx  App.module.css  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: db.rs  lib.rs  parser.rs
src/components/: LazyLoader.jsx
src/hooks/: useAuth.js  useChatWorkspace.js  useDocumentLibrary.js  useDocumentSearch.js  useTheme.js
src/lib/: aiCategory.js  aiSummary.js  appConfig.js  desktop.js  documentPreview.js  fileTypes.js  markdown.js  summary.js  summaryConstants.js
src/styles/: animations.css  base.css  layout.css  tokens.css
src/ui/: classNames.js  index.js
src/utils/: chatScope.js  chatScope.test.js  documentIntelligence.js  documentIntelligence.test.js  documentView.js  (+4 more)
(+89 files in other folders)
