[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.11.2", features = ["protocol-asset"] }
tauri-plugin-log = "2"
tokio = { version = "1", features = ["full"] }
lancedb = "0.8"
uuid = { version = "1.7", features = ["v4", "serde"] }
chrono = "=0.4.38"
futures = "0.3"
arrow-schema = "52"
arrow-array = "52"
lopdf = "0.31"
rfd = "0.14"
